fixed layout bugs, synchronized frontend & backend  and added history

--- a/src/main/resources/static/css/mycss/mystyle.css
+++ b/src/main/resources/static/css/mycss/mystyle.css
@@ -74,6 +74,18 @@
   .page_btn_border{
       margin: 20px;
   }
-
+    .banner-bottom{
+        width: 100%;
+        overflow:auto;
+        padding-top: 1em;
+    }
+    .mytitle{
+        color: #2a99d6;
+        left: 1em;
+    }
+    .threeColumn{
+        padding: 1em;
+        margin: 1em;
+    }
 
 }
